--- a/ZXcList0.tex
+++ b/ZXcList0.tex
@@ -5,398 +5,96 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-<<<<<<< HEAD
-\cardbackground{Tier 2 treasure} 
-\cardimage{m5} 
-\cardtitle{Purified Potion} 
+\cardbackground{Attack} 
+\cardimage{N4} 
+\cardtitle{Constructor1} 
 \cardborder{} 
-\cardcontent{When a player gains a gem or relic that costs 5 \Money or more, they deal 1 damage. \newline During any player's main phase, that player may destroy this treasure to return two gems or relics they played this turn to their hand.} 
-\cardprice{0} 
-\sync{0.45}
+\cardcontent{Place a card from the most expensive gem supply pile on top of the construct deck.} 
+\cardprice{1} 
+\sync{0.05}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Tier 2 treasure} 
-\cardimage{m5} 
-\cardtitle{Looking Glass} 
+\cardbackground{Attack} 
+\cardimage{N4} 
+\cardtitle{Constructor2} 
 \cardborder{} 
-\cardcontent{When a player opens a breach, any player gains a \Money token. \newline During any player's main phase, they may destroy this treasure to deal 2 damage for each of their opened breaches.} 
-\cardprice{0} 
-\sync{0.45}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tier 2 treasure} 
-\cardimage{m5} 
-\cardtitle{Diabolic Fade} 
-\cardborder{} 
-\cardcontent{When this treasure is put into play, each player focuses one of their breaches. \newline During any player's main phase, if they have four or more prepped spells, they may destroy this treasure to shuffle their turn order card into the turn order deck.} 
-\cardprice{0} 
-\sync{0.45}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tier 2 treasure} 
-\cardimage{m5} 
-\cardtitle{Poison Heart} 
-\cardborder{} 
-\cardcontent{Set this next to any supply pile that costs 3 \Money or less. \newline After a player finishes resolving their ability, they may gain a card from this supply pile. During any player's main phase, if this supply pile is empty, they may destroy this treasure to destroy up to three cards in their hand or discard pile.} 
-\cardprice{0} 
-\sync{0.45}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tier 2 treasure} 
-\cardimage{m5} 
-\cardtitle{Blighted Rock Clump} 
-\cardborder{} 
-\cardcontent{Set this next to any supply pile. When a player gains a card from this supply pile, any player gains a charge. During any player's main phase, if this supply pile is empty, they may destroy this treasure to have Gravehold gain 3 life.} 
-\cardprice{0} 
-\sync{0.45}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tier 2 treasure} 
-\cardimage{m5} 
-\cardtitle{Bones of Deathmind} 
-\cardborder{} 
-\cardcontent{Set this next to any gem or relic supply pile. Cards from this supply pile cost 1 \Money less to gain. During any player's main phase, if they have three or more gems or relics in hand that cost 2 \Money or more, they may destroy this treasure to have an ally draw four cards.} 
-\cardprice{0} 
-\sync{0.45}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Tier 2 treasure} 
-\cardimage{m5} 
-\cardtitle{Blackened Rib} 
-\cardborder{} 
-\cardcontent{Set this next to any spell supply pile that costs 5 \Money or more. When a player gains a card from this supply pile, they focus their closed breach with the lowest focus cost and they may place that card on top of their deck. During any player's main phase, they may destroy this treasure to cast any number of their prepped spells.} 
-\cardprice{0} 
-\sync{0.45}
-=======
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Too Hot!} 
-\cardborder{} 
-\cardcontent{Put a Magmanite into play. If Overheating, reduce the Heat Track by 3 and any player suffers 3 damage.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{THE EARTH RECLAIMS HER STOLEN FLESH} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 4. OR Any player loses 2 slots and suffers 3 damage. Reduce the Heat Track by 2..} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Lecture} 
-\cardborder{} 
-\cardcontent{Put 2 Magmanites into play. Any player draws 3 cards. OR Put a Magmanite into play and any player powers down twice.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Hot Damn!} 
-\cardborder{} 
-\cardcontent{Put a Magmanite into play. If Overheating, reduce the Heat Track by 2 and any player discards 3 cards.} 
-\cardprice{} 
-\sync{0.01}
+\cardcontent{Place a card from two different supply piles on top of the construct deck. \newline \Or \newline Gravehold suffers 4 damage.} 
+\cardprice{1} 
+\sync{0.05}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Lava Plume} 
+\cardimage{N4} 
+\cardtitle{Constructor3} 
 \cardborder{} 
-\cardcontent{Defeated: Reduce the Heat Track by 3.  Activate: Any player suffers 1 damage. The City suffers 1 damage.} 
-\cardprice{} 
+\cardcontent{\Defeated: Remove a power token from Fuse. Repeat this. \newline \Persistent: Gravehold suffers 2 damage.} 
+\cardprice{1} 
 \cardhp{5} 
-\sync{0.01}
+\sync{0.04}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N4} 
+\cardtitle{Constructor4} 
+\cardborder{} 
+\cardcontent{\Immediately: Shuffle the construct deck. \newline \Power 3: Unleash. Place a card from the supply pile matching the top card of the construction deck onto the construct deck.} 
+\cardprice{2} 
+\sync{0.05}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N4} 
+\cardtitle{Constructor5} 
+\cardborder{} 
+\cardcontent{\To \Discard: Place three cards on top of the construct deck from any supply pile. \newline \Power 2: Gravehold suffers 8 damage.} 
+\cardprice{2} 
+\sync{0.05}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Lava Geyser} 
+\cardimage{N4} 
+\cardtitle{Constructor6} 
 \cardborder{} 
-\cardcontent{Activate: If Overheating, The City suffers 3 damage and reduce the Heat Track by 1. Otherwise, increase the Heat Track by 1.} 
-\cardprice{} 
-\cardhp{6} 
-\sync{0.01}
+\cardcontent{\Persistent: Remove a power token from Fuse. Unleash. This suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{12} 
+\sync{0.04}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N4} 
+\cardtitle{Constructor7} 
+\cardborder{} 
+\cardcontent{Remove a power token from Fuse. Repeat this twice. Place an exact copy of a golem in play into play.} 
+\cardprice{3} 
+\sync{0.05}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
+\cardimage{N4} 
+\cardtitle{Constructor8} 
 \cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
+\cardcontent{\Immediately: Remove a power token from Fuse. Repeat this. \newline \Persistent: A golem gains one nemesis token and resolves its effect \newline \Or \newline Gravehold suffers 4 damage.} 
+\cardprice{3} 
+\cardhp{11} 
+\sync{0.05}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
+\cardbackground{Power} 
+\cardimage{N4} 
+\cardtitle{Constructor9} 
 \cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Magmanite} 
-\cardborder{} 
-\cardcontent{Increase the Heat Track by 1 whenever this minion is damaged.  Activate: Any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{3} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Screech} 
-\cardborder{} 
-\cardcontent{The City suffers 3 damage. Any player discards 2 cards. } 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Flail} 
-\cardborder{} 
-\cardcontent{Players collectively discard 3 cards. If all cards discarded this way cost 0, the City suffers 3 damage.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Coil} 
-\cardborder{} 
-\cardcontent{The City suffers 4 damage. OR Any player loses 2 slots and suffers 2 damage.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Puncture} 
-\cardborder{} 
-\cardcontent{The City suffers 5 damage. OR The players collectively discard 5 cards.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Aid} 
-\cardimage{} 
-\cardtitle{Be Quick} 
-\cardborder{} 
-\cardcontent{Each player draws 2 cards, then discards a card.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Aid} 
-\cardimage{} 
-\cardtitle{Kill It} 
-\cardborder{} 
-\cardcontent{Deal 6 damage.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Aid} 
-\cardimage{} 
-\cardtitle{Prepare Yourself} 
-\cardborder{} 
-\cardcontent{Each player chooses to either gain a slot or power up twice.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Aid} 
-\cardimage{} 
-\cardtitle{Take This} 
-\cardborder{} 
-\cardcontent{Each player gains a card that costs 3 energy or less to the top of their deck.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Aid} 
-\cardimage{} 
-\cardtitle{That's Enough} 
-\cardborder{} 
-\cardcontent{Deal 100 damage to the Villain. This starts at the bottom of the Aid Deck.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{Show Me You Can Learn} 
-\cardborder{} 
-\cardcontent{Any player discards a fuel and suffers 2 damage.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{You Are Failing This Planet} 
-\cardborder{} 
-\cardcontent{Any player suffers 1 damage. Any player loses a slot. Any player powers down.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{We Started With Reason} 
-\cardborder{} 
-\cardcontent{Any player powers down and discards an equipped weapon. 
-If that weapon cost 0, that player suffers 2 damage.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Strike} 
-\cardimage{} 
-\cardtitle{You Dare Interrupt Your Education?} 
-\cardborder{} 
-\cardcontent{Any player suffers 4 damage and draws a card. OR Any player discards a weapon that costs 5 or more energy.} 
-\cardprice{} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Smoking Crater} 
-\cardborder{} 
-\cardcontent{Activate: Any player suffers 1 damage. If Anissa is level 3 or higher, that player discards a card.} 
-\cardprice{} 
-\cardhp{5} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Stratospheric Uppercut} 
-\cardborder{} 
-\cardcontent{Activate: Any player discards a card. If Anissa is level 4 or higher, that player suffers 1 damage.} 
-\cardprice{} 
-\cardhp{4} 
-\sync{0.01}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{} 
-\cardtitle{Crashing Wave} 
-\cardborder{} 
-\cardcontent{Activate: The City suffers 1 damage. If Anissa is level 5 or higher, any player suffers 2 damage.} 
-\cardprice{} 
-\cardhp{4} 
-\sync{0.01}
->>>>>>> ba0fc768e9d1a9e4a69af0533517eb9052a5f297
+\cardcontent{\Power 1: Place the supply pile with the most cards in it on top of the construct deck.} 
+\cardprice{3} 
+\sync{0.04}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
