--- a/ZXbSheet.tex
+++ b/ZXbSheet.tex
@@ -26,40 +26,31 @@
 \pagestyle{empty}\begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{Doc Seismic \image{} \hp{50}};
-\setup{Place the Magmanite cards in a pile faceup to form the Magmanite deck and set it next to this mat, as the Villain side deck.
-
-Flip this mat over and place the Villain Disk on space 2 of the Heat track. If you are playing with 4 players, place the Villain Disk on space 0 instead.}
-\unleash{}
+\name{Upsider \image{N5} \hp{70}};
+\setup{}
+\unleash{The nemesis gains 1 nemesis token.}
 \difficulty{}
-\rules{When a Magmanite would be placed into play and the Magmanite deck is empty, any player suffers 4 damage instead.
-If the Heat track would be increased and cannot be, The City suffers 1 damage for each time it would be increased.};\diffR{};
+\rules{While the nemesis is polarized and would draw a nemesis card, it draws an additional nemesis card, and the players collectively gain 4 \Money tokens. At the end of the nemesis turn, if the nemesis has four or more nemesis tokens it becomes polarized. At the start of the nemesis turn, if the nemesis has 0 nemesis tokens, it becomes unpolarized. During any player's main phase, that player may destroy a card that costs 1 \Money or more in hand or discard pile to remove a nemesis token. If the destroyed card was in hand, remove an additional nemesis token.};\diffR{};
 \end{tikzpicture}
 
 \begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{The Cruise Kaiju \image{} \hp{20}};
-\setup{Set aside the "That's Enough!" aid card. Shuffle the other Aid cards in a pile facedown next to the Boss Mat to form the Aid Deck. Place the "That's Enough!" aid card at the bottom of the Aid Deck. If you are playing with 1 or 2 players, discard the top card of the Aid Deck. 
-
-Shuffle the Annisa Turn Order Card into the Turn Order Deck. Then, Flip this mat over.}
-\unleash{}
+\name{Creeper \image{N7} \hp{*}};
+\setup{Place the Creeper board next to this. Place two spawners on the start spaces of the board. Unleash.}
+\unleash{Place a creep token as close to each spawner as possible.}
 \difficulty{}
-\rules{The Anissa Turn Order Card is neither a player turn or a villain turn.
-When the Anissa Turn Order Card is drawn from the Turn Order Deck, draw the top card of the Aid Deck and discard it.
-When The Cruise Kaiju is defeated, instead of winning the game, remove all of the Kaiju’s cards and its board from the game. Then, set up and fight Anissa.};\diffR{};
+\rules{Creep tokens have health equal to the number of adjacent creep tokens/spawners and heal to full at the end of turn. If a connected component of creep is disconnected from a spawner, destroy it. Each spawner has 10 health. When a player deals damage to the nemesis, prevent that damage. When all spawners are defeated, the players win. When a player deals damage to a spawner that is surrounded by creep, reduce that damage by 2, minimum 1. When creep is placed on an icon, resolve that icon's effect. When the board has no empty spaces, Gravehold is overrun and the players lose.};\diffR{};
 \end{tikzpicture}
 
 \begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{Anissa \image{} \hp{60}};
-\setup{Other than replacing The Cruise Kaiju, keep everything else the same. 
-If there are 2/3/4/5 Aid cards in the Aid discard pile, place Anissa's level 2/3/4/5 token into play.
-Then, Flip this mat over.}
-\unleash{}
+\name{The Bull \image{N8} \hp{25}};
+\setup{Place the Bull track next to this. Place the nemesis on the starting space. Place two boulders on the board on the starting spaces. Place Enrage in play.}
+\unleash{Remove a power token from Enrage.}
 \difficulty{}
-\rules{The Anissa turn order card is a third Villain turn. When the Anissa turn order card is drawn, resolve a Villain turn.};\diffR{};
+\rules{When a player deals damage to the nemesis, prevent that damage and advance the cavei-n track by a number of spaces equal to the damage done. When the nemesis rushes, if bait is in the same row or column, it moves toward the bait, stopping when it reaches a boulder or the edge of the board. Otherwise, the nemesis moves toward the edge of the board that's furthest away and not blocked by a boulder. If the nemesis reaches the edge of the board, Gravehold suffers 1 damage per space traveled. If it hit a boulder, the nemesis takes 1 damage per space traveled and that boulder is destroyed. During a player's main phase, they may lose 2 charges to place a bait on an unoccupied space. When the nemesis moves over bait, destroy that bait.};\diffR{};
 \end{tikzpicture}
 
 
