--- a/ZXcList1.tex
+++ b/ZXcList1.tex
@@ -5,123 +5,106 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{N7} 
+\cardtitle{Creeper1} 
+\cardborder{} 
+\cardcontent{\Power 3: Place a spawner into play.} 
+\cardprice{1} 
+\sync{0.06}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
 \cardbackground{Power} 
-\cardimage{Foe4} 
-\cardtitle{Spreading Shadow} 
+\cardimage{N7} 
+\cardtitle{Creeper2} 
 \cardborder{} 
-\cardcontent{\Power 0: For each nemesis token Creeping Dark has, Gravehold suffers 3 damage. Then, Creeping Dark gains one nemesis token. \newline Do not discard this card from play. Instead, add 5 power tokens to this card. Then, add 1 power tokens for each player to this card.} 
-\cardprice{0} 
-\sync{0.33}
+\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 3: Unleash. Creep placed this way must be placed on icons if possible.} 
+\cardprice{1} 
+\sync{0.06}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N7} 
+\cardtitle{Creeper3} 
+\cardborder{} 
+\cardcontent{\Persistent: Place creep as close to a spawner as possible.} 
+\cardprice{1} 
+\cardhp{8} 
+\sync{0.06}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N7} 
+\cardtitle{Creeper4} 
+\cardborder{} 
+\cardcontent{\Power 2: Unleash. Resolve the effects of creep placed this way twice.} 
+\cardprice{2} 
+\sync{0.06}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{N7} 
+\cardtitle{Creeper5} 
+\cardborder{} 
+\cardcontent{\Power 3: Place a spawner into play. Unleash.} 
+\cardprice{2} 
+\sync{0.06}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N7} 
+\cardtitle{Creeper6} 
+\cardborder{} 
+\cardcontent{When this is defeated, place a Spawnner into play. \newline \Persistent: Any player suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{6} 
+\sync{0.06}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Attack} 
-\cardimage{Foe4} 
-\cardtitle{Plunge} 
+\cardimage{N7} 
+\cardtitle{Creeper7} 
 \cardborder{} 
-\cardcontent{Any player destroys a card in hand that costs 1 \Money or more. \newline \Or \newline Any player discards two gems.} 
-\cardprice{0} 
-\sync{0.33}
+\cardcontent{Place a spawner into play. Unleash.} 
+\cardprice{3} 
+\sync{0.06}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{N7} 
+\cardtitle{Creeper8} 
+\cardborder{} 
+\cardcontent{While this is in play, prevent damage dealt to creep or spawners. \newline \Persistent: Gravehold suffers 3 damage.} 
+\cardprice{3} 
+\cardhp{9} 
+\sync{0.06}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Attack} 
-\cardimage{Foe4} 
-\cardtitle{Pooling Black} 
+\cardimage{N7} 
+\cardtitle{Creeper9} 
 \cardborder{} 
-\cardcontent{Creeping Dark gains 3 charges. Add two power tokens to Spreading Shadow. \newline \Or \newline Any player discards a gem in hand that costs 2 \Money or more.} 
-\cardprice{0} 
-\sync{0.32}
+\cardcontent{Any player and Gravehold each suffer 3 damage. \newline \Or \newline Place a spawner into play. Unleash twice.} 
+\cardprice{3} 
+\sync{0.06}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe4} 
-\cardtitle{Light Drain} 
+\cardbackground{Power} 
+\cardimage{N8} 
+\cardtitle{Enrage} 
 \cardborder{} 
-\cardcontent{Creeping Dark gains 2 charges. \newline \Or \newline Remove one power token from Spreading Shadow. Remove one power token from Spreading Shadow. Remove one power token from Spreading Shadow.} 
-\cardprice{0} 
-\sync{0.33}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe1} 
-\cardtitle{Devour} 
-\cardborder{} 
-\cardcontent{Destroy a card from the least expensive supply pile. The Hunger gains 2 charges. \newline \Or \newline Any player discards a card and suffers 3 damage.} 
-\cardprice{0} 
-\sync{0.42}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe1} 
-\cardtitle{Bite} 
-\cardborder{} 
-\cardcontent{Draw a tendril. \newline Any player gains a gem from the supply that costs 4 \Money or less.} 
-\cardprice{0} 
-\sync{0.42}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe1} 
-\cardtitle{Chew} 
-\cardborder{} 
-\cardcontent{If The Hunger is dormant, destroy a card from four different supply piles and The Hunger gains a charge. \newline Otheriwse, draw a tendril.} 
-\cardprice{0} 
-\sync{0.42}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe1} 
-\cardtitle{Swallow} 
-\cardborder{} 
-\cardcontent{Destroy a card from the most expensive supply pile. The Hunger gains 2 charges. \newline \Or \newline Any player destroys a card in hand that costs 5 \Money or more. That player gains a card from the supply that costs less than the destroyed card.} 
-\cardprice{0} 
-\sync{0.42}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe5} 
-\cardtitle{Devil's Bargain} 
-\cardborder{} 
-\cardcontent{Any player gains a temptation token and 2 charges. The Mask gains 1 charge. \newline \Or \newline Any player loses a temptation token. That player loses 4 charges or suffers 5 damage.} 
-\cardprice{0} 
-\sync{0.41}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe5} 
-\cardtitle{Corruption's Kiss} 
-\cardborder{} 
-\cardcontent{Any player gains a temptation token and gains a card from the supply that costs 4 \Money or less. The Mask gains 1 charge. \newline \Or \newline Any player loses a temptation token. That player destroys a card in hand that costs 5 \Money or more or suffers 5 damage.} 
-\cardprice{0} 
-\sync{0.41}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe5} 
-\cardtitle{Poisonous Promises} 
-\cardborder{} 
-\cardcontent{Any player gains a temptation token and 1 \Money token. \newline \Or \newline Any player loses a temptation token and discards four cards in hand. The Mask gains 1 charge.} 
-\cardprice{0} 
-\sync{0.41}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{Foe5} 
-\cardtitle{Pay the Piper} 
-\cardborder{} 
-\cardcontent{The Mask gains 2 charges.} 
-\cardprice{0} 
-\sync{0.41}
+\cardcontent{\Power 4: The nemesis rushes. \newline Instead of discarding this, place three power tokens on this. } 
+\cardprice{3} 
+\sync{0.06}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
