--- a/ZXcList0.tex
+++ b/ZXcList0.tex
@@ -5,96 +5,13 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N4} 
-\cardtitle{Constructor1} 
-\cardborder{} 
-\cardcontent{Place a card from the most expensive gem supply pile on top of the construct deck.} 
-\cardprice{1} 
-\sync{0.05}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N4} 
-\cardtitle{Constructor2} 
-\cardborder{} 
-\cardcontent{Place a card from two different supply piles on top of the construct deck. \newline \Or \newline Gravehold suffers 4 damage.} 
-\cardprice{1} 
-\sync{0.05}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Constructor3} 
-\cardborder{} 
-\cardcontent{\Defeated: Remove a power token from Fuse. Repeat this. \newline \Persistent: Gravehold suffers 2 damage.} 
-\cardprice{1} 
-\cardhp{5} 
-\sync{0.04}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N4} 
-\cardtitle{Constructor4} 
-\cardborder{} 
-\cardcontent{\Immediately: Shuffle the construct deck. \newline \Power 3: Unleash. Place a card from the supply pile matching the top card of the construction deck onto the construct deck.} 
-\cardprice{2} 
-\sync{0.05}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
 \cardbackground{Power} 
 \cardimage{N4} 
-\cardtitle{Constructor5} 
+\cardtitle{Fuse} 
 \cardborder{} 
-\cardcontent{\To \Discard: Place three cards on top of the construct deck from any supply pile. \newline \Power 2: Gravehold suffers 8 damage.} 
-\cardprice{2} 
-\sync{0.05}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Constructor6} 
-\cardborder{} 
-\cardcontent{\Persistent: Remove a power token from Fuse. Unleash. This suffers 2 damage.} 
-\cardprice{2} 
-\cardhp{12} 
-\sync{0.04}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N4} 
-\cardtitle{Constructor7} 
-\cardborder{} 
-\cardcontent{Remove a power token from Fuse. Repeat this twice. Place an exact copy of a golem in play into play.} 
-\cardprice{3} 
-\sync{0.05}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N4} 
-\cardtitle{Constructor8} 
-\cardborder{} 
-\cardcontent{\Immediately: Remove a power token from Fuse. Repeat this. \newline \Persistent: A golem gains one nemesis token and resolves its effect \newline \Or \newline Gravehold suffers 4 damage.} 
-\cardprice{3} 
-\cardhp{11} 
-\sync{0.05}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N4} 
-\cardtitle{Constructor9} 
-\cardborder{} 
-\cardcontent{\Power 1: Place the supply pile with the most cards in it on top of the construct deck.} 
-\cardprice{3} 
-\sync{0.04}
+\cardcontent{\Power 4: Weld a Golem. \newline Instead of discarding this, place three power tokens on this. } 
+\cardprice{0} 
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
