--- a/ZXcList1.tex
+++ b/ZXcList1.tex
@@ -5,106 +5,445 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N7} 
-\cardtitle{Creeper1} 
+\cardbackground{Gem} 
+\cardimage{G6} 
+\cardtitle{Skyglass} 
 \cardborder{} 
-\cardcontent{\Power 3: Place a spawner into play.} 
-\cardprice{1} 
-\sync{0.06}
+\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
+\cardprice{4} 
+\carddevcost{3} 
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N7} 
-\cardtitle{Creeper2} 
+\cardbackground{Gem} 
+\cardimage{G6} 
+\cardtitle{Skyglass} 
 \cardborder{} 
-\cardcontent{\To \Discard: Spend 6 \Money. \newline \Power 3: Unleash. Creep placed this way must be placed on icons if possible.} 
-\cardprice{1} 
-\sync{0.06}
+\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
+\cardprice{4} 
+\carddevcost{3} 
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N7} 
-\cardtitle{Creeper3} 
+\cardbackground{Gem} 
+\cardimage{G6} 
+\cardtitle{Skyglass} 
 \cardborder{} 
-\cardcontent{\Persistent: Place creep as close to a spawner as possible.} 
-\cardprice{1} 
-\cardhp{8} 
-\sync{0.06}
+\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
+\cardprice{4} 
+\carddevcost{3} 
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N7} 
-\cardtitle{Creeper4} 
+\cardbackground{Gem} 
+\cardimage{G6} 
+\cardtitle{Skyglass} 
 \cardborder{} 
-\cardcontent{\Power 2: Unleash. Resolve the effects of creep placed this way twice.} 
+\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
+\cardprice{4} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G6} 
+\cardtitle{Skyglass} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
+\cardprice{4} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G6} 
+\cardtitle{Skyglass} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
+\cardprice{4} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardimage{G6} 
+\cardtitle{Skyglass} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by 2. \newline Gain 2 \Money. newline If Intensity is 5 or higher, gain 1 charge.} 
+\cardprice{4} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Paradox Coil} 
+\cardborder{} 
+\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
+\cardprice{7} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Paradox Coil} 
+\cardborder{} 
+\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
+\cardprice{7} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Paradox Coil} 
+\cardborder{} 
+\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
+\cardprice{7} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Paradox Coil} 
+\cardborder{} 
+\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
+\cardprice{7} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S9} 
+\cardtitle{Paradox Coil} 
+\cardborder{} 
+\cardcontent{When you develop this, suffer 1 damage. \newline \Cast: Deal 5 damage. Increase the intensity by 1. \newline \Or \newline \Cast: If the Intensity is 6, deal 8 damage.} 
+\cardprice{7} 
+\carddevcost{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Future Pulse} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
+\cardprice{6} 
+\carddevcost{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Future Pulse} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
+\cardprice{6} 
+\carddevcost{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Future Pulse} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
+\cardprice{6} 
+\carddevcost{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Future Pulse} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
+\cardprice{6} 
+\carddevcost{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S10} 
+\cardtitle{Future Pulse} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the Intensity by up to 2. \newline \Cast: Deal 4 damage. If the Intensity is 6, any ally gains 2 charges.} 
+\cardprice{6} 
+\carddevcost{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R3} 
+\cardtitle{Galactic Knife} 
+\cardborder{} 
+\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
+\cardprice{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R3} 
+\cardtitle{Galactic Knife} 
+\cardborder{} 
+\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
+\cardprice{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R3} 
+\cardtitle{Galactic Knife} 
+\cardborder{} 
+\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
+\cardprice{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R3} 
+\cardtitle{Galactic Knife} 
+\cardborder{} 
+\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
+\cardprice{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R3} 
+\cardtitle{Galactic Knife} 
+\cardborder{} 
+\cardcontent{Any ally gains 2 \Money tokens. \newline \Or \newline Any player destroys a card in their discard pile. If that card costs 3 \Money or more, Gravehold gains 3 life.} 
+\cardprice{3} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Jailed Sun} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Jailed Sun} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Jailed Sun} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Jailed Sun} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R9} 
+\cardtitle{Jailed Sun} 
+\cardborder{} 
+\cardcontent{When you develop this, you may adjust the intensity by up to 1. newline \newline Any ally reveals the top three cards of their deck, places one into their hand and discards the rest.} 
+\cardprice{3} 
+\carddevcost{2} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S11} 
+\cardtitle{Ashstorm} 
+\cardborder{} 
+\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
+\cardprice{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S11} 
+\cardtitle{Ashstorm} 
+\cardborder{} 
+\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
+\cardprice{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S11} 
+\cardtitle{Ashstorm} 
+\cardborder{} 
+\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
+\cardprice{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S11} 
+\cardtitle{Ashstorm} 
+\cardborder{} 
+\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
+\cardprice{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S11} 
+\cardtitle{Ashstorm} 
+\cardborder{} 
+\cardcontent{While prepped, you may prep an additional spell that costs 6 \Money or more to this breach. When a different spell is cast from the breach this is prepped to, that spell deals 2 additional damage. \newline \Cast: Deal 3 damage.} 
+\cardprice{4} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S18} 
+\cardtitle{End's Ripple} 
+\cardborder{} 
+\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
+\cardprice{7} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S18} 
+\cardtitle{End's Ripple} 
+\cardborder{} 
+\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
+\cardprice{7} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S18} 
+\cardtitle{End's Ripple} 
+\cardborder{} 
+\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
+\cardprice{7} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S18} 
+\cardtitle{End's Ripple} 
+\cardborder{} 
+\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
+\cardprice{7} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardimage{S18} 
+\cardtitle{End's Ripple} 
+\cardborder{} 
+\cardcontent{\Cast: Focus any player's breach. Repeat this. Deal 3 damage. \newline \Or \newline \Cast: If any player has no closed breaches, deal 7 damage.} 
+\cardprice{7} 
+\sync{0.16}
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardimage{R14} 
+\cardtitle{Shifting Glass} 
+\cardborder{} 
+\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
 \cardprice{2} 
-\sync{0.06}
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N7} 
-\cardtitle{Creeper5} 
+\cardbackground{Relic} 
+\cardimage{R14} 
+\cardtitle{Shifting Glass} 
 \cardborder{} 
-\cardcontent{\Power 3: Place a spawner into play. Unleash.} 
+\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
 \cardprice{2} 
-\sync{0.06}
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N7} 
-\cardtitle{Creeper6} 
+\cardbackground{Relic} 
+\cardimage{R14} 
+\cardtitle{Shifting Glass} 
 \cardborder{} 
-\cardcontent{When this is defeated, place a Spawnner into play. \newline \Persistent: Any player suffers 2 damage.} 
+\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
 \cardprice{2} 
-\cardhp{6} 
-\sync{0.06}
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N7} 
-\cardtitle{Creeper7} 
+\cardbackground{Relic} 
+\cardimage{R14} 
+\cardtitle{Shifting Glass} 
 \cardborder{} 
-\cardcontent{Place a spawner into play. Unleash.} 
-\cardprice{3} 
-\sync{0.06}
+\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
+\cardprice{2} 
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardimage{N7} 
-\cardtitle{Creeper8} 
+\cardbackground{Relic} 
+\cardimage{R14} 
+\cardtitle{Shifting Glass} 
 \cardborder{} 
-\cardcontent{While this is in play, prevent damage dealt to creep or spawners. \newline \Persistent: Gravehold suffers 3 damage.} 
-\cardprice{3} 
-\cardhp{9} 
-\sync{0.06}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardimage{N7} 
-\cardtitle{Creeper9} 
-\cardborder{} 
-\cardcontent{Any player and Gravehold each suffer 3 damage. \newline \Or \newline Place a spawner into play. Unleash twice.} 
-\cardprice{3} 
-\sync{0.06}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardimage{N8} 
-\cardtitle{Enrage} 
-\cardborder{} 
-\cardcontent{\Power 4: The nemesis rushes. \newline Instead of discarding this, place three power tokens on this. } 
-\cardprice{3} 
-\sync{0.06}
+\cardcontent{When you gain this, increase the intensity by 2. \newline Gain a charge. Adjust the intensity by up to 2.} 
+\cardprice{2} 
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
