--- a/charSheetBoomka.tex
+++ b/charSheetBoomka.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Boomka}{m2}
-\ability{Fabricate: Activate during your main phase: Gain a spell from the supply and place it on top of your deck.}{4}
+\ability{Fabricate: Activate during your main phase: Gain a spell from any supply pile and place it on top of your deck. \newline \Or \newline Gravehold gains 5 life.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
-\startingHand{Futix}{Crystal}{Crystal}{Crystal}{Crystal}
-\notes{Spells cast from Boomka's breaches that cost 4 \Money or less deal 1 less damage, minimum 1. Spells cast from Boomka's breaches that cost 5 \Money or more deal 2 additional damage.}
-\startingPrep{own0.png}{1}{rent1.png}{2}{rent2.png}{2}{rent3.png}{2}
+\startingHand{Mutalium}{Crystal}{Crystal}{Crystal}{Crystal}
+\notes{Spells that cost 5 \Money or more that are cast from Boomka's opened breaches deal 2 additional damage.}
+\startingPrep{}{1}{own1.png}{1}{rent2.png}{1}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
