--- a/charSheetCraze.tex
+++ b/charSheetCraze.tex
@@ -7,9 +7,9 @@
 \name{Craze}{m4}
 \ability{Accel: Activate during your main phase: Place up to two spells in your discard pile into hand. \newline \Or \newline Gain 4 \Money.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Spark}{Spark}
-\notes{Spells cast from I breach give 1 \Money and deal -1 damage (minimum 0). Spells cast from II breach give 1 charge and deal -1 damage (minimum 0). Spells cast from III breach deal +2 damage if you discard a card in hand. Spells cast from IV breach focuses an ally's breach or any ally gains a charge.}
-\startingPrep{own0.png}{1}{own1.png}{1}{own2.png}{1}{own3.png}{1}
+\startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{When a spell is cast from Craze's I breach, focus your closed breach with the cheapest focus cost. That spell deals -1 damage (minimum 0). When a spell is cast from Craze's opened II breach, gain 1 \Money. When a spell is cast from Craze's opened III breach any ally focuses a breach or gains a charge. When a spell is cast from Craze's opened IV breach, that spell deals 2 additional damage.}
+\startingPrep{own0.png}{1}{rent1.png}{2}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
  \end{document}
