--- a/charSheetVilpo.tex
+++ b/charSheetVilpo.tex
@@ -5,9 +5,9 @@
 \cardborder 
 \basicinfo 
 \name{Vilpo}{m7}
-\ability{Flow Beam: Activate during your main phase: Destroy a card in your discard pile. Gain a card that costs up to 3 more than it. \newline \Or \newline If your deck and discard pile contain 20 or more cards, destroy any number of cards in your discard pile and deal two damage per card destroyed this way.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Fluzin}
-\startingHand{Crystal}{Crystal}{Crystal}{Spark}{Starkium}
+\ability{Flow Beam: Activate during your main phase: Destroy a card in your discard pile. Gain a card that costs up to 3 more than it. \newline \Or \newline If your deck and discard pile contain 15 or more cards, destroy any number of cards in your discard pile and deal two damage per card destroyed this way.}{4}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Starkium}
+\startingHand{Crystal}{Crystal}{Crystal}{Spark}{Fluzin}
 \notes{}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
