--- a/ZXbSheet.tex
+++ b/ZXbSheet.tex
@@ -26,11 +26,31 @@
 \pagestyle{empty}\begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
+\name{Earthmaker \image{N3} \hp{99}};
+\setup{Place the Elemental track next to this. Place 1 nemesis tokens in each row starting from the left.}
+\unleash{Remove a nemesis token from the right most covered space in a row on the track.}
+\difficulty{}
+\rules{When a player deals damage to the nemesis, and the row that matches the breach that spell was cast from is not full, divide that damage by 2, rounded up. Add a nemesis token to the leftmost empty space in the row that matches the breach that spell was cast from. If the damage is not associated with a I-IV breach, add it to any row. When a nemesis token is added to a space, the active player resolves the icon under that token. When the last nemesis token in a row is removed or a nemesis token would be removed but cannot, Gravehold suffers 3 damage.};\diffR{};
+\end{tikzpicture}
+
+\begin{tikzpicture} 
+\draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
+\draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
+\name{The Constructor \image{N4} \hp{60}};
+\setup{Place the Fuse power into play. Place a card from the least expensive supply pile faceup next to this mat to form the construct deck. If playing with two players, destroy one card from the five least expensive supply piles.}
+\unleash{Place a supply card from any supply pile on top of the construct deck. Repeat this.}
+\difficulty{}
+\rules{When The Constructor welds a golem: newline 1. If the construct deck is empty, place a card from any supply pile on top of the construct deck. newline 2. Place a Golem into play with two health per card in the construct deck. 3. Place a nemesis token on it for every two cards, rounded up, in the construct deck. newline  4. Destroy all cards in the construct deck. newline If the supply is empty, shuffle the destroyed cards that cost 1 \Money or more and deal them out evenly into 9 piles to reform the supply. };\diffR{};
+\end{tikzpicture}
+
+\begin{tikzpicture} 
+\draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
+\draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
 \name{Upsider \image{N5} \hp{70}};
 \setup{}
-\unleash{The nemesis gains 1 nemesis token.}
+\unleash{If the nemesis has 4 or less nemesis tokens, the nemesis gains 1 nemesis token. Otherwise, Any player or Gravehold suffers 2 damage.}
 \difficulty{}
-\rules{While the nemesis is polarized and would draw a nemesis card, it draws an additional nemesis card, and the players collectively gain 4 \Money tokens. At the end of the nemesis turn, if the nemesis has four or more nemesis tokens it becomes polarized. At the start of the nemesis turn, if the nemesis has 0 nemesis tokens, it becomes unpolarized. During any player's main phase, that player may destroy a card that costs 1 \Money or more in hand or discard pile to remove a nemesis token. If the destroyed card was in hand, remove an additional nemesis token.};\diffR{};
+\rules{While the nemesis is polarized, when a player deals damage to the nemesis, increase that damage by 2. At the end of the nemesis turn, if the nemesis has three or more nemesis tokens it becomes polarized. At the start of the nemesis turn, if the nemesis has 0 nemesis tokens, it becomes unpolarized. During any player's main phase, that player may destroy a card that costs 1 \Money or more in hand. If the destroyed card costs 1-3 \Money, the nemesis loses 1 nemesis token. If the destroyed card costs 4 \Money or more, the nemesis loses 2 nemesis tokens instead. If the nemesis deck is empty, shuffle the tier 3 cards in the nemesis discard pile and place them facedown to reform the nemesis deck.};\diffR{};
 \end{tikzpicture}
 
 \begin{tikzpicture} 
@@ -38,19 +58,19 @@
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
 \name{Creeper \image{N7} \hp{*}};
 \setup{Place the Creeper board next to this. Place two spawners on the start spaces of the board. Unleash.}
-\unleash{Place a creep token as close to each spawner as possible.}
+\unleash{Place a creep token as close to a spawner as possible. Repeat this twice.}
 \difficulty{}
-\rules{Creep tokens have health equal to the number of adjacent creep tokens/spawners and heal to full at the end of turn. If a connected component of creep is disconnected from a spawner, destroy it. Each spawner has 10 health. When a player deals damage to the nemesis, prevent that damage. When all spawners are defeated, the players win. When a player deals damage to a spawner that is surrounded by creep, reduce that damage by 2, minimum 1. When creep is placed on an icon, resolve that icon's effect. When the board has no empty spaces, Gravehold is overrun and the players lose.};\diffR{};
+\rules{Creep tokens have health equal to the number of adjacent creep tokens/spawners and heal to full at the end of turn. If a connected component of creep is disconnected from a spawner, destroy it. Each spawner has 10 health. When a player deals damage to the nemesis, prevent that damage. When all spawners are defeated, the players win. When a player deals damage to a spawner that is surrounded by creep, prevent that damage. When creep is placed on an icon, resolve that icon's effect. When the board has no empty spaces, Gravehold is overrun and the players lose.};\diffR{};
 \end{tikzpicture}
 
 \begin{tikzpicture} 
 \draw[black] \shapeCard; \newline\newcommand{\Or}{\textbf{OR}};
 \draw[ultra thick] (\cardwidth/2, \cardheight*.56) rectangle (0, \cardheight); 
-\name{The Bull \image{N8} \hp{25}};
+\name{The Bull \image{N8} \hp{40}};
 \setup{Place the Bull track next to this. Place the nemesis on the starting space. Place two boulders on the board on the starting spaces. Place Enrage in play.}
 \unleash{Remove a power token from Enrage.}
 \difficulty{}
-\rules{When a player deals damage to the nemesis, prevent that damage and advance the cavei-n track by a number of spaces equal to the damage done. When the nemesis rushes, if bait is in the same row or column, it moves toward the bait, stopping when it reaches a boulder or the edge of the board. Otherwise, the nemesis moves toward the edge of the board that's furthest away and not blocked by a boulder. If the nemesis reaches the edge of the board, Gravehold suffers 1 damage per space traveled. If it hit a boulder, the nemesis takes 1 damage per space traveled and that boulder is destroyed. During a player's main phase, they may lose 2 charges to place a bait on an unoccupied space. When the nemesis moves over bait, destroy that bait.};\diffR{};
+\rules{When a player deals damage to the nemesis, prevent that damage and advance the cave-in track by a number of spaces equal to the damage done. When the nemesis rushes, if it can reach bait in a straight line, it moves toward the bait, stopping when it reaches a boulder or the edge of the board. Otherwise, the nemesis moves toward the edge of the board that's furthest away and not blocked by a boulder. If the nemesis cannot reach the edge of the board, it moves toward the closest boulder instead. If the nemesis reaches the edge of the board, Gravehold suffers 1 damage per space traveled (minimum 1). If it hit a boulder, the nemesis takes 2 damage per space traveled. When the nemesis ends a rush, destroy each adjacent boulder. If the nemesis moves 0 spaces from a rush, destroy each boulder in its row and column. During a player's main phase, they may lose 2 charges to place a bait on an unoccupied space. When the nemesis moves over bait, destroy that bait. Instead of placing boulders on the board, players may drop a boulder on the nemesis, dealing 2 damage to it and destroying the boulder.};\diffR{};
 \end{tikzpicture}
 
 
