--- a/ZXcList2.tex
+++ b/ZXcList2.tex
@@ -5,388 +5,13 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G13} 
-\cardtitle{Hungering Vimite} 
+\cardbackground{Spell} 
+\cardimage{m3} 
+\cardtitle{Spinner} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{4} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G13} 
-\cardtitle{Hungering Vimite} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{4} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G13} 
-\cardtitle{Hungering Vimite} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{4} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G13} 
-\cardtitle{Hungering Vimite} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{4} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G13} 
-\cardtitle{Hungering Vimite} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Any ally may place a Crystal in hand on top of your deck. If they do, gain 1 additional \Money{}.} 
-\cardprice{4} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G3} 
-\cardtitle{Echoing Globe} 
-\cardborder{} 
-\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G3} 
-\cardtitle{Echoing Globe} 
-\cardborder{} 
-\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G3} 
-\cardtitle{Echoing Globe} 
-\cardborder{} 
-\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G3} 
-\cardtitle{Echoing Globe} 
-\cardborder{} 
-\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G3} 
-\cardtitle{Echoing Globe} 
-\cardborder{} 
-\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G3} 
-\cardtitle{Echoing Globe} 
-\cardborder{} 
-\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G3} 
-\cardtitle{Echoing Globe} 
-\cardborder{} 
-\cardcontent{When you gain this, gain 2 pulse tokens. Gain 2 \Money. \newline \Recall: Lose 1 pulse token. Deal 1 damage.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G5} 
-\cardtitle{Grim Garnet} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G5} 
-\cardtitle{Grim Garnet} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G5} 
-\cardtitle{Grim Garnet} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G5} 
-\cardtitle{Grim Garnet} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G5} 
-\cardtitle{Grim Garnet} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G5} 
-\cardtitle{Grim Garnet} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G5} 
-\cardtitle{Grim Garnet} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money. \newline \Recall: Any ally gains 1 \Money{} token.} 
-\cardprice{5} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G12} 
-\cardtitle{Everlove} 
-\cardborder{} 
-\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G12} 
-\cardtitle{Everlove} 
-\cardborder{} 
-\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G12} 
-\cardtitle{Everlove} 
-\cardborder{} 
-\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G12} 
-\cardtitle{Everlove} 
-\cardborder{} 
-\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G12} 
-\cardtitle{Everlove} 
-\cardborder{} 
-\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G12} 
-\cardtitle{Everlove} 
-\cardborder{} 
-\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G12} 
-\cardtitle{Everlove} 
-\cardborder{} 
-\cardcontent{When you gain this, you may place it on the bottom of your discard pile. \newline Gain 2 \Money{}. \newline \Recall: Any ally draws a card and discards a card in hand.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G1} 
-\cardtitle{Rhythm Ruby} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G1} 
-\cardtitle{Rhythm Ruby} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G1} 
-\cardtitle{Rhythm Ruby} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G1} 
-\cardtitle{Rhythm Ruby} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G1} 
-\cardtitle{Rhythm Ruby} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G1} 
-\cardtitle{Rhythm Ruby} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardimage{G1} 
-\cardtitle{Rhythm Ruby} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. Gain 1 pulse tokens. \newline You may lose 4 pulse token to cast a prepped spell without discarding it.} 
-\cardprice{3} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R10} 
-\cardtitle{Oracle's Vigor} 
-\cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R10} 
-\cardtitle{Oracle's Vigor} 
-\cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R10} 
-\cardtitle{Oracle's Vigor} 
-\cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R10} 
-\cardtitle{Oracle's Vigor} 
-\cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.14}
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardimage{R10} 
-\cardtitle{Oracle's Vigor} 
-\cardborder{} 
-\cardcontent{When you develop this, gain 2 pulse tokens. \newline Destroy this. Reveal the turn order deck. Return it in any order. Lose 1 pulse token. Any ally draws a card.} 
-\cardprice{3} 
-\carddevcost{2} 
-\sync{0.14}
+\cardcontent{\Cast: Deal 1 damage.} 
+\cardprice{1} 
+\sync{0.16}
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
