--- a/charSheetMoosap.tex
+++ b/charSheetMoosap.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Moosap}{m8}
-\ability{Empower: Activate during your turn: Any ally places a crystal into your hand. Repeat this. You may change form. Double the effect of your form until the end of your turn.}{4}
-\startingDeck{Tralite}{Crystal}{Crystal}{Spark}{Spark}
-\startingHand{Tralite}{Crystal}{Crystal}{Spark}{Spark}
-\notes{Form token: Normal form = nothing new. Bizarro Form: Crystals deal 1 damage. Sparks gain 1 \Money instead of usual effects.}
-\startingPrep{own0.png}{1}{rent1.png}{3}{rent2.png}{1}{rent3.png}{4}
+\ability{Empower: Cast any player's prepped spell. That spell deals 3 additional damage.}{5}
+\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
+\startingHand{Tralite}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{}
+\startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
