--- a/charSheetParity.tex
+++ b/charSheetParity.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Parity}{m3}
-\ability{Round Doom: Activate during your main phase: Cast all of your spells prepped to odd breaches. Those spells deal 3 additional damage. \newline \Or \newline Cast all of your spells prepped to even breaches. Those spells deal 2 additional damage.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spinner}
+\ability{Round Doom: Activate during your main phase: Cast all of your spells prepped to odd breaches. For each spell cast this way, any ally gains a charge. \newline \Or \newline Cast all of your spells prepped to even breaches. For each spell cast this way, any ally draws a card.}{4}
+\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spinner}
 \startingHand{Uppite}{Crystal}{Crystal}{Crystal}{Spark}
-\notes{Spells cast from Parity's opened or closed breaches deal 1 additional damage if they match the parity of that breach (Odd to odd, even to even) and 1 less damage if they don't (minimum 1). Zero is even. III/IV breach no automatic +1 on open.}
-\startingPrep{own0.png}{1}{rent1.png}{2}{rent2.png}{2}{rent3.png}{2}
+\notes{Spells cast from Parity's opened or closed breaches deal 1 additional damage if they match the parity of that breach (Odd to odd, even to even) and 1 less damage if they don't (minimum 0). Zero is even. III/IV breach no automatic +1 on open.}
+\startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
  \end{document}
