--- a/charSheetSlova.tex
+++ b/charSheetSlova.tex
@@ -5,11 +5,11 @@
 \cardborder 
 \basicinfo 
 \name{Slova}{m9}
-\ability{Brrrrrr: Activate during your main phase: Cast any number of spells prepped to your IV breach. You may destroy any spells cast this way.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
-\startingHand{Mistite}{Crystal}{Crystal}{Spark}{Spark}
-\notes{Slova's IV breach is the deferral breach. Spells cannot be prepped to this breach except by effects that directly refer to it. When a spell is cast from Slova's other breaches, destroy those spells instead of resolving their effect. At the end of Slova's casting phase, prep any spells destroyed this turn to Slova's IV \breach. When a spell is cast from Slova's IV breach, that spell deals 2 additional damage. Slova's IV breach cannot be destroyed. Any number of spells can be prepped to Slova's IV breach.}
-\startingPrep{own0.png}{1}{rent1.png}{2}{rent2.png}{2}{own3.png}{1}
+\ability{Brrrrrr: Activate during your main phase: Place a spell in your discard pile into your hand. You may prep spells to your IV breach from hand until end of turn.}{4}
+\startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
+\startingHand{Mistite}{Crystal}{Crystal}{Crystal}{Spark}
+\notes{Slova's IV breach is the deferral breach. Spells cannot be prepped to this breach except by effects that directly refer to it. At the start of Slova's casting phase, cast each spell prepped to his IV breach. When a spell is cast from Slova's I/II/III breaches, prep those spells to the deferral breach instead of resolving their effect even if the deferral breach is closed. When a spell is cast from Slova's opened IV breach, that spell deals 2 additional damage. Slova's IV breach cannot be destroyed. Any number of spells can be prepped to Slova's IV breach.}
+\startingPrep{own0.png}{1}{rent1.png}{2}{rent2.png}{2}{rent3.png}{4}
 \end{tikzpicture}
 
  \end{document}
